test/tests/stages/16_characters_and_strings/valid/chars/access_through_char_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[15]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 100
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: byte_ptr
                  CSingleInit: 
                    CCast: 
                      CAddrOf: 
                        CVar: 
                          TIdentifier: x
                          None: 
                        None: 
                      Pointer: 
                        Char: 
                      None: 
                    None: 
                  Pointer: 
                    Char: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: byte_ptr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    COr: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: byte_ptr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: byte_ptr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    None: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: byte_ptr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: d
                  CSingleInit: 
                    CUnary: 
                      CNegate: 
                      CConstant: 
                        CConstDouble: 
                          TDouble: 0.000000
                        None: 
                      None: 
                    None: 
                  Double: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: byte_ptr
                    None: 
                  CCast: 
                    CAddrOf: 
                      CVar: 
                   